[package]
name = "adventus"
version = "2024.12.2"
edition = "2021"

[dependencies]
rand = "0.8.5"
songbird = "0.4.1"
poise = "0.6.1"
symphonia = { features = ["mp3"], version = "0.5.4" }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tokio = { version = "1.44.2", features = ["full"] }
uuid = { version = "1.16.0", features = ["v4"] }

[dependencies.serenity]
version = "0.12.4"
features = ["voice"]
