[package]
name = "adventus"
version = "2025.5.1"
edition = "2021"

[dependencies]
once_cell = "1.21.3"
rand = "0.8.5"
songbird = "0.4.6"
poise = "0.6.1"
symphonia = "0.5.4"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tokio = { version = "1.44.2", features = ["full"] }
serenity = { version = "0.12.4", features = ["voice"] }
