[package]
name = "adventus"
version = "2025.8.0"
edition = "2021"

[dependencies]
once_cell = "1.21.3"
rand = "0.9.2"
songbird = "0.5.0"
poise = "0.6.1"
symphonia = "0.5.4"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tokio = { version = "1.47.0", features = ["full"] }
serenity = { version = "0.12.4", features = ["voice"] }
